# tailor-my-cv

./: .replit  README.md  render.yaml  requirements.txt
static/: styles.css
tailor-my-cv/: appy.py  main.py  pyproject.toml
tailor-my-cv/templates/: result.html
templates/: index.html  result.html
